Fix spacing

--- a/src/assets/sass/04_base/_paragraph.scss
+++ b/src/assets/sass/04_base/_paragraph.scss
@@ -1,3 +1,7 @@
 p {
 	margin-bottom: 0;
 }
+
+article > * + * {
+	margin-block-start: var(--gap);
+}
